Creating BP from c++ class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/HospitalMap.HospitalMap
+EditorStartupMap=/Game/HospitalMap.HospitalMap
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
