--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/HospitalMap.HospitalMap
-EditorStartupMap=/Game/HospitalMap.HospitalMap
+GameDefaultMap=/Game/HospitalMap2.HospitalMap2
+EditorStartupMap=/Game/HospitalMap2.HospitalMap2
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
